fixed: loading file tile must have same height as complete ones to avoid incorrect row wrapping

--- a/magda-web-client/src/Components/Dataset/Add/DatasetFile.scss
+++ b/magda-web-client/src/Components/Dataset/Add/DatasetFile.scss
@@ -17,6 +17,7 @@
     }
 
     .file-in-progress {
+        height: 93px;
         .dataset-file-delete-button {
             position: absolute;
             width: 26px;
